Improve JEI/REI/EMI performance, CyclopsMC/IntegratedTerminals#139